--- a/style.css
+++ b/style.css
@@ -25,22 +25,36 @@ a{
 }
 
 /*------------------------------------------*/
-/*Layout de la pagina*/
+/*Estilo Layout de la pagina*/
 .layout-container{
   display: grid;
-  grid-template-columns: minmax(250px,250px) minmax(500px,700px) minmax(200px,300px) ;
+  grid-template-columns: minmax(250px,280px) minmax(500px,900px) minmax(200px,280px) ;
   grid-template-rows:auto;
-  column-gap: 5px;
+  column-gap: 20px;
   min-height: 80vh;
+}
+/*------------------------------------------*/
+/*Estilo del menu izquierdo */
+.layout-left-menu{
+  background-color:#4d4444;
 }
 
 
+/*------------------------------------------*/
+/*Estilo del main content */
+.layout-right-menu{
+  background-color:#4d4444;
+  text-align:center;
+  padding:30px;
+}
+/*------------------------------------------*/
+/*Estilo del menu derecho */
 
 
 /*------------------------------------------*/
 /*Estilo de la view Agregar materias alumno*/
 .contanainer-agregar-materia{
-  border:2px solid blue;
+  margin-bottom:20px;
 }
 
 .contanainer-agregar-materia h2{
@@ -51,7 +65,6 @@ a{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  color: bisque;
   text-align: center;
 }
 
@@ -69,9 +82,9 @@ a{
 }
 
 /*------------------------------------------*/
-/*Estilo de la view Agregar materias alumno*/
+/*Estilo de la view Eliminar materias alumno*/
 .contanainer-eliminar-materia{
-  border:2px solid blue;
+ 
 }
 
 .contanainer-eliminar-materia h2{
@@ -82,7 +95,6 @@ a{
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  color: bisque;
   text-align: center;
   
 }
@@ -107,14 +119,27 @@ a{
   display: grid;
   grid-template-columns: minmax(150px,200px) minmax(150px,300px) minmax(150px,300px);
   grid-template-rows:auto;
-  color: bisque;
+  
 }
 
 .contanainer-mostrar-materia > *{
   text-align: center;
-  border: 2px solid blue;
+  border-bottom: 1px solid blue;
+  font-size:20px;
   padding-top: 10px;
   padding-bottom: 10px;
+}
+/*------------------------------------------*/
+/*Estilo de la view login y registro*/
+.layout-login-container{
+ min-height: 80vh;
+text-align:center;
+}
+
+.layout-login-container > *{
+ border:2px solid blue;
+  margin:10px 150px;
+  padding:20px 0px;
 }
 
 
